formalens/grammar/test/corpus/definitions.txt
================================================================================
Simple struct
================================================================================

pub struct Point {
  x: Number,
  y: Number
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (type_identifier)
    (struct_field
      name: (identifier)
      type: (primitive_type))
    (struct_field
      name: (identifier)
      type: (primitive_type))))

================================================================================
Struct with trait
================================================================================

pub struct Button: View + Layerable {
  label: String,
  mount content: View
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (type_identifier)
    (struct_traits
      (type_reference (type_identifier))
      (type_reference (type_identifier)))
    (struct_field
      name: (identifier)
      type: (primitive_type))
    (struct_field
      name: (identifier)
      type: (type_reference (type_identifier)))))

================================================================================
Simple trait
================================================================================

pub trait Named {
  name: String
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    name: (type_identifier)
    (trait_field
      name: (identifier)
      type: (primitive_type))))

================================================================================
Simple enum
================================================================================

pub enum Status {
  pending,
  active,
  completed
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (type_identifier)
    (enum_variant_definition name: (identifier))
    (enum_variant_definition name: (identifier))
    (enum_variant_definition name: (identifier))))

================================================================================
Enum with data
================================================================================

pub enum Message {
  text(content: String),
  image(url: Path, size: Number)
}

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (type_identifier)
    (enum_variant_definition
      name: (identifier)
      (enum_variant_parameters
        (enum_variant_parameter
          name: (identifier)
          type: (primitive_type))))
    (enum_variant_definition
      name: (identifier)
      (enum_variant_parameters
        (enum_variant_parameter
          name: (identifier)
          type: (primitive_type))
        (enum_variant_parameter
          name: (identifier)
          type: (primitive_type))))))

================================================================================
Default block
================================================================================

default Button {
  disabled: false,
  color: "blue"
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (literal (boolean)))
    (default_field
      name: (identifier)
      value: (literal (string (string_content))))))

================================================================================
Module definition
================================================================================

pub mod alignment {
  pub enum Horizontal {
    left,
    center,
    right
  }
}

--------------------------------------------------------------------------------

(source_file
  (module_definition
    name: (identifier)
    (enum_definition
      name: (type_identifier)
      (enum_variant_definition name: (identifier))
      (enum_variant_definition name: (identifier))
      (enum_variant_definition name: (identifier)))))

================================================================================
Use statement
================================================================================

use components::{Button, Text, Label}

--------------------------------------------------------------------------------

(source_file
  (use_statement
    (use_path
      (identifier)
      (use_group
        (type_identifier)
        (type_identifier)
        (type_identifier)))))
