formalens/grammar/test/corpus/let_expression.txt
================================================================================
Let expression in for block
================================================================================

default Config {
  result: for item in items {
    let x = 1
    Label(text: "test")
  }
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (for_expression
        variable: (identifier)
        iterable: (identifier)
        (block
          (let_expression
            (identifier)
            (literal (number)))
          (struct_instantiation
            (type_reference (type_identifier))
            (call_arguments
              (call_argument
                name: (identifier)
                value: (literal (string (string_content)))))))))))

================================================================================
Let expression in if block
================================================================================

default Config {
  result: if condition {
    let temp = value
    Label(text: temp)
  }
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (if_expression
        condition: (identifier)
        (block
          (let_expression
            (identifier)
            (identifier))
          (struct_instantiation
            (type_reference (type_identifier))
            (call_arguments
              (call_argument
                name: (identifier)
                value: (identifier)))))))))

================================================================================
Mutable let expression
================================================================================

default Config {
  result: for item in items {
    let mut counter = 0
    Label(text: "test")
  }
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (for_expression
        variable: (identifier)
        iterable: (identifier)
        (block
          (let_expression
            (identifier)
            (literal (number)))
          (struct_instantiation
            (type_reference (type_identifier))
            (call_arguments
              (call_argument
                name: (identifier)
                value: (literal (string (string_content)))))))))))

================================================================================
Let with type annotation
================================================================================

default Config {
  result: for item in items {
    let x: Number = 42
    Label(text: "test")
  }
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (for_expression
        variable: (identifier)
        iterable: (identifier)
        (block
          (let_expression
            (identifier)
            (primitive_type)
            (literal (number)))
          (struct_instantiation
            (type_reference (type_identifier))
            (call_arguments
              (call_argument
                name: (identifier)
                value: (literal (string (string_content)))))))))))

================================================================================
Let with tuple value
================================================================================

default Config {
  result: for item in items {
    let data = (name: "John", age: 30)
    Label(text: data.name)
  }
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (for_expression
        variable: (identifier)
        iterable: (identifier)
        (block
          (let_expression
            (identifier)
            (tuple_literal
              (tuple_field
                name: (identifier)
                value: (literal (string (string_content))))
              (tuple_field
                name: (identifier)
                value: (literal (number)))))
          (struct_instantiation
            (type_reference (type_identifier))
            (call_arguments
              (call_argument
                name: (identifier)
                value: (field_access
                  (identifier)
                  (identifier))))))))))

================================================================================
Let with tuple type annotation
================================================================================

default Config {
  result: for item in items {
    let data: (name: String, age: Number) = (name: "John", age: 30)
    Label(text: data.name)
  }
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (for_expression
        variable: (identifier)
        iterable: (identifier)
        (block
          (let_expression
            (identifier)
            (tuple_type
              (tuple_type_field
                name: (identifier)
                type: (primitive_type))
              (tuple_type_field
                name: (identifier)
                type: (primitive_type)))
            (tuple_literal
              (tuple_field
                name: (identifier)
                value: (literal (string (string_content))))
              (tuple_field
                name: (identifier)
                value: (literal (number)))))
          (struct_instantiation
            (type_reference (type_identifier))
            (call_arguments
              (call_argument
                name: (identifier)
                value: (field_access
                  (identifier)
                  (identifier))))))))))
