formalens/grammar/test/corpus/tuples.txt
================================================================================
Simple tuple literal in default block
================================================================================

default Config {
  person: (name: "John", age: 30)
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (tuple_literal
        (tuple_field
          name: (identifier)
          value: (literal (string (string_content))))
        (tuple_field
          name: (identifier)
          value: (literal (number)))))))

================================================================================
Nested tuple in default block
================================================================================

default Config {
  nested: (user: (first: "John", last: "Doe"), active: true)
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (tuple_literal
        (tuple_field
          name: (identifier)
          value: (tuple_literal
            (tuple_field
              name: (identifier)
              value: (literal (string (string_content))))
            (tuple_field
              name: (identifier)
              value: (literal (string (string_content))))))
        (tuple_field
          name: (identifier)
          value: (literal (boolean)))))))

================================================================================
Tuple with trailing comma
================================================================================

default Config {
  data: (x: 1, y: 2,)
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (tuple_literal
        (tuple_field
          name: (identifier)
          value: (literal (number)))
        (tuple_field
          name: (identifier)
          value: (literal (number)))))))

================================================================================
Tuple field access
================================================================================

default Config {
  name: person.name
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (field_access
        (identifier)
        (identifier)))))

================================================================================
Tuple access chain
================================================================================

default Config {
  firstName: data.user.first
}

--------------------------------------------------------------------------------

(source_file
  (default_block
    (type_reference (type_identifier))
    (default_field
      name: (identifier)
      value: (field_access
        (field_access
          (identifier)
          (identifier))
        (identifier)))))
